# gvozd

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/api/src/app/: config.rs  container.rs  errors.rs  mod.rs  server.rs
crates/application/: Cargo.toml
crates/application/src/: errors.rs  lib.rs
crates/application/src/dto/: token.rs  user.rs
crates/application/src/services/: auth.rs
crates/application/tests/: auth_service_test.rs
crates/domain/: Cargo.toml
crates/domain/src/models/: token.rs  user.rs
crates/domain/src/repository/: token.rs  user.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: db.rs
crates/infrastructure/src/repository/: token.rs  user.rs
crates/infrastructure/tests/: user_repository_test.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: errors.rs  lib.rs  routes.rs
crates/presentation/src/api/: auth.rs  mod.rs
crates/presentation/src/api/requests/: auth.rs
crates/presentation/src/api/responses/: auth.rs
migrations/: 20250706235134_init.down.sql  20250706235134_init.up.sql
tests/integration_tests/: Cargo.toml
tests/integration_tests/src/: lib.rs
tests/integration_tests/tests/: auth_controller_test.rs  auth_service_test.rs  user_repository_test.rs
