[workspace]
members = [
  "crates/*",
  "apps/*",
  "tests/*"
]
resolver = "2"

[workspace.dependencies]
#Web
actix-web = "4.11.0"
actix-cors = "0.7.1"

#Database
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "chrono", "migrate", "uuid", "macros"] }

#Async
async-trait = "0.1.88"
tokio = { version = "1.46.1", features = ["full"] }

#Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

#Logging
log = "0.4.27"
env_logger = "0.11.8"

#Error
thiserror = "2.0.12"

#Crypto
bcrypt = "0.17.0"

#Mics
uuid = { version = "1.17.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"

#Test
mockall = "0.13.1"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
