[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
chrono.workspace = true
uuid.workspace = true

domain = { path = "../domain"}

[dev-dependencies]
mockall.workspace = true
