[package]
name = "integration_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
testcontainers-modules.workspace = true
actix-web.workspace = true
serde_json.workspace = true

presentation = { path = "../../crates/presentation/"}
infrastructure = { path = "../../crates/infrastructure/"}
domain = { path = "../../crates/domain/"}
application = { path = "../../crates/application/"}
